Working on: Make post body in the same way readable as Safari's reader view (Issue #6)

--- a/assets/scss/framework/design/typography/text-style/text-style.scss
+++ b/assets/scss/framework/design/typography/text-style/text-style.scss
@@ -19,6 +19,7 @@ $text-block-width: $lem * 33;
     @include scale(default);
     @include font(default);
     @include colors(default);
+    letter-spacing: 1.1px;
   }
 
   // Site title
